<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccountFragment">

    <!-- Account type and expiry -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="0sp">

        <TextView
            android:id="@+id/planAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$29"
            android:textColor="@color/colorPrimary"
            android:textSize="64sp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/DashboardBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_talk_text"
                android:id="@+id/planTalkAndText"/>

            <TextView
                style="@style/DashboardBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="5.0 GB of 4G LTE"
                android:id="@+id/planDataAmount"/>

            <TextView
                style="@style/DashboardCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="Expires on 31 Jan 2019"
                android:id="@+id/planExpires"/>

        </LinearLayout>

    </LinearLayout>

    <!-- List of balances -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <!-- International Credit -->
        <TextView android:layout_width="200dp"
            android:text="@string/balance_international"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_marginBottom="@dimen/text_margin"
            style="@style/DashboardBalance"/>
        <TextView android:layout_width="wrap_content"
            android:id="@+id/balanceIntl"
            android:layout_column="1"
            android:layout_row="0"
            style="@style/DashboardCurrency"/>

        <!-- Ultra Wallet -->
        <TextView android:layout_width="200dp"
            android:text="@string/balance_wallet"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_marginBottom="@dimen/text_margin"
            style="@style/DashboardBalance"/>
        <TextView android:layout_width="wrap_content"
            android:id="@+id/balanceWallet"
            android:layout_column="1"
            android:layout_row="1"
            style="@style/DashboardCurrency"/>

        <!-- Roaming credit -->
        <TextView android:layout_width="200dp"
            android:text="@string/balance_roaming"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_marginBottom="@dimen/text_margin"
            style="@style/DashboardBalance"/>
        <TextView android:layout_width="wrap_content"
            android:id="@+id/balanceRoaming"
            android:layout_column="1"
            android:layout_row="2"
            style="@style/DashboardCurrency"/>

    </GridLayout>

    <!-- Action buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            style="@style/DashboardCurrency"
            android:text="@string/account_reload_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="25"
                android:hint="@string/account_reload_placeholder"
                android:id="@+id/actionRecharge"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_reload_button"
                android:enabled="false"
                android:id="@+id/actionRechargeButton"
                android:focusableInTouchMode="true"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>